--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/list_store"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="none"/>
+        android:text="@string/empty"
+        android:layout_centerInParent="true"
+        />
+
+    <com.yang.interviewdemo.utils.SlideCutListView
+        android:id="@+id/slideCutListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:listSelector="@android:color/transparent"
+        android:divider="@color/gray"
+        android:cacheColorHint="@android:color/transparent"
+        android:scrollbars="none"
+        android:layout_marginBottom="50dp"
+        android:background="#ffffff"/>
+
+    <TextView
+        android:id="@+id/txt_clean_local"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/local"
+        android:layout_alignParentBottom="true"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/gray_white_circular"
+        />
+
+    <TextView
+        android:id="@+id/txt_get_network"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/network"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/gray_white_circular"
+        />
 
 </RelativeLayout>
